seaqt/QtWidgets/gen_qtreewidget.h

typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QItemSelection QItemSelection;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMimeData QMimeData;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QTreeWidget QTreeWidget;
typedef struct QTreeWidgetItem QTreeWidgetItem;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
void QTreeWidget_connect_itemPressed(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemClicked(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemDoubleClicked(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemActivated(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemEntered(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemChanged(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemExpanded(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*), void (*release)(intptr_t));
void QTreeWidget_connect_itemCollapsed(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*), void (*release)(intptr_t));
void QTreeWidget_connect_currentItemChanged(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, QTreeWidgetItem*), void (*release)(intptr_t));
void QTreeWidget_connect_itemSelectionChanged(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
struct miqt_array /* of QModelIndex* */  QTreeWidget_virtualbase_selectedIndexes(const void* self);
void QTreeWidget_virtualbase_timerEvent(void* self, QTimerEvent* event);
void QTreeWidget_virtualbase_paintEvent(void* self, QPaintEvent* event);
void QTreeWidget_virtualbase_drawRow(const void* self, QPainter* painter, QStyleOptionViewItem* options, QModelIndex* index);
void QTreeWidget_virtualbase_drawBranches(const void* self, QPainter* painter, QRect* rect, QModelIndex* index);
void QTreeWidget_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
void QTreeWidget_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
void QTreeWidget_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
void QTreeWidget_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
void QTreeWidget_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
void QTreeWidget_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QTreeWidget_virtualbase_viewportEvent(void* self, QEvent* event);
void QTreeWidget_virtualbase_updateGeometries(void* self);
QSize* QTreeWidget_virtualbase_viewportSizeHint(const void* self);
int QTreeWidget_virtualbase_sizeHintForColumn(const void* self, int column);
void QTreeWidget_virtualbase_horizontalScrollbarAction(void* self, int action);
bool QTreeWidget_virtualbase_isIndexHidden(const void* self, QModelIndex* index);
void QTreeWidget_virtualbase_selectionChanged(void* self, QItemSelection* selected, QItemSelection* deselected);
void QTreeWidget_virtualbase_currentChanged(void* self, QModelIndex* current, QModelIndex* previous);
int QTreeWidget_virtualbase_sizeHintForRow(const void* self, int row);
QVariant* QTreeWidget_virtualbase_inputMethodQuery(const void* self, int query);
void QTreeWidget_virtualbase_updateEditorData(void* self);
void QTreeWidget_virtualbase_updateEditorGeometries(void* self);
void QTreeWidget_virtualbase_verticalScrollbarAction(void* self, int action);
void QTreeWidget_virtualbase_horizontalScrollbarValueChanged(void* self, int value);
void QTreeWidget_virtualbase_closeEditor(void* self, QWidget* editor, int hint);
void QTreeWidget_virtualbase_commitData(void* self, QWidget* editor);
void QTreeWidget_virtualbase_editorDestroyed(void* self, QObject* editor);
bool QTreeWidget_virtualbase_edit2(void* self, QModelIndex* index, int trigger, QEvent* event);
int QTreeWidget_virtualbase_selectionCommand(const void* self, QModelIndex* index, QEvent* event);
void QTreeWidget_virtualbase_startDrag(void* self, int supportedActions);
QStyleOptionViewItem* QTreeWidget_virtualbase_viewOptions(const void* self);
bool QTreeWidget_virtualbase_focusNextPrevChild(void* self, bool next);
void QTreeWidget_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
void QTreeWidget_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
void QTreeWidget_virtualbase_focusInEvent(void* self, QFocusEvent* event);
void QTreeWidget_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
void QTreeWidget_virtualbase_resizeEvent(void* self, QResizeEvent* event);
void QTreeWidget_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* event);
bool QTreeWidget_virtualbase_eventFilter(void* self, QObject* object, QEvent* event);
QSize* QTreeWidget_virtualbase_minimumSizeHint(const void* self);
QSize* QTreeWidget_virtualbase_sizeHint(const void* self);
void QTreeWidget_virtualbase_setupViewport(void* self, QWidget* viewport);
void QTreeWidget_virtualbase_wheelEvent(void* self, QWheelEvent* param1);
void QTreeWidget_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
void QTreeWidget_virtualbase_changeEvent(void* self, QEvent* param1);
int QTreeWidget_virtualbase_devType(const void* self);
void QTreeWidget_virtualbase_setVisible(void* self, bool visible);
int QTreeWidget_virtualbase_heightForWidth(const void* self, int param1);
bool QTreeWidget_virtualbase_hasHeightForWidth(const void* self);
QPaintEngine* QTreeWidget_virtualbase_paintEngine(const void* self);
void QTreeWidget_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
void QTreeWidget_virtualbase_enterEvent(void* self, QEvent* event);
void QTreeWidget_virtualbase_leaveEvent(void* self, QEvent* event);
void QTreeWidget_virtualbase_moveEvent(void* self, QMoveEvent* event);
void QTreeWidget_virtualbase_closeEvent(void* self, QCloseEvent* event);
void QTreeWidget_virtualbase_tabletEvent(void* self, QTabletEvent* event);
void QTreeWidget_virtualbase_actionEvent(void* self, QActionEvent* event);
void QTreeWidget_virtualbase_showEvent(void* self, QShowEvent* event);
void QTreeWidget_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QTreeWidget_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
int QTreeWidget_virtualbase_metric(const void* self, int param1);
void QTreeWidget_virtualbase_initPainter(const void* self, QPainter* painter);
QPaintDevice* QTreeWidget_virtualbase_redirected(const void* self, QPoint* offset);
QPainter* QTreeWidget_virtualbase_sharedPainter(const void* self);
void QTreeWidget_virtualbase_childEvent(void* self, QChildEvent* event);
void QTreeWidget_virtualbase_customEvent(void* self, QEvent* event);
void QTreeWidget_virtualbase_connectNotify(void* self, QMetaMethod* signal);
void QTreeWidget_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
struct miqt_array /* of QTreeWidgetItem* */  QTreeWidget_protectedbase_items(const void* self, QMimeData* data);
QModelIndex* QTreeWidget_protectedbase_indexFromItem(const void* self, QTreeWidgetItem* item);
QModelIndex* QTreeWidget_protectedbase_indexFromItemWithItem(const void* self, QTreeWidgetItem* item);
QTreeWidgetItem* QTreeWidget_protectedbase_itemFromIndex(const void* self, QModelIndex* index);
QModelIndex* QTreeWidget_protectedbase_indexFromItem2(const void* self, QTreeWidgetItem* item, int column);
QModelIndex* QTreeWidget_protectedbase_indexFromItem22(const void* self, QTreeWidgetItem* item, int column);
void QTreeWidget_protectedbase_columnResized(void* self, int column, int oldSize, int newSize);
void QTreeWidget_protectedbase_columnCountChanged(void* self, int oldCount, int newCount);
void QTreeWidget_protectedbase_columnMoved(void* self);
void QTreeWidget_protectedbase_reexpand(void* self);
void QTreeWidget_protectedbase_rowsRemoved(void* self, QModelIndex* parent, int first, int last);
void QTreeWidget_protectedbase_drawTree(const void* self, QPainter* painter, QRegion* region);
int QTreeWidget_protectedbase_indexRowSizeHint(const void* self, QModelIndex* index);
int QTreeWidget_protectedbase_rowHeight(const void* self, QModelIndex* index);
void QTreeWidget_protectedbase_setHorizontalStepsPerItem(void* self, int steps);
int QTreeWidget_protectedbase_horizontalStepsPerItem(const void* self);
void QTreeWidget_protectedbase_setVerticalStepsPerItem(void* self, int steps);