seaqt/QtWidgets/gen_qtreewidget.nim

proc fcQTreeWidget_virtualbase_selectedIndexes(self: pointer, ): struct_miqt_array {.importc: "QTreeWidget_virtualbase_selectedIndexes".}
proc fcQTreeWidget_virtualbase_timerEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_timerEvent".}
proc fcQTreeWidget_virtualbase_paintEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_paintEvent".}
proc fcQTreeWidget_virtualbase_drawRow(self: pointer, painter: pointer, options: pointer, index: pointer): void {.importc: "QTreeWidget_virtualbase_drawRow".}
proc fcQTreeWidget_virtualbase_drawBranches(self: pointer, painter: pointer, rect: pointer, index: pointer): void {.importc: "QTreeWidget_virtualbase_drawBranches".}
proc fcQTreeWidget_virtualbase_mousePressEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_mousePressEvent".}
proc fcQTreeWidget_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_mouseReleaseEvent".}
proc fcQTreeWidget_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_mouseDoubleClickEvent".}
proc fcQTreeWidget_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_mouseMoveEvent".}
proc fcQTreeWidget_virtualbase_keyPressEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_keyPressEvent".}
proc fcQTreeWidget_virtualbase_dragMoveEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_dragMoveEvent".}
proc fcQTreeWidget_virtualbase_viewportEvent(self: pointer, event: pointer): bool {.importc: "QTreeWidget_virtualbase_viewportEvent".}
proc fcQTreeWidget_virtualbase_updateGeometries(self: pointer, ): void {.importc: "QTreeWidget_virtualbase_updateGeometries".}
proc fcQTreeWidget_virtualbase_viewportSizeHint(self: pointer, ): pointer {.importc: "QTreeWidget_virtualbase_viewportSizeHint".}
proc fcQTreeWidget_virtualbase_sizeHintForColumn(self: pointer, column: cint): cint {.importc: "QTreeWidget_virtualbase_sizeHintForColumn".}
proc fcQTreeWidget_virtualbase_horizontalScrollbarAction(self: pointer, action: cint): void {.importc: "QTreeWidget_virtualbase_horizontalScrollbarAction".}
proc fcQTreeWidget_virtualbase_isIndexHidden(self: pointer, index: pointer): bool {.importc: "QTreeWidget_virtualbase_isIndexHidden".}
proc fcQTreeWidget_virtualbase_selectionChanged(self: pointer, selected: pointer, deselected: pointer): void {.importc: "QTreeWidget_virtualbase_selectionChanged".}
proc fcQTreeWidget_virtualbase_currentChanged(self: pointer, current: pointer, previous: pointer): void {.importc: "QTreeWidget_virtualbase_currentChanged".}
proc fcQTreeWidget_virtualbase_sizeHintForRow(self: pointer, row: cint): cint {.importc: "QTreeWidget_virtualbase_sizeHintForRow".}
proc fcQTreeWidget_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer {.importc: "QTreeWidget_virtualbase_inputMethodQuery".}
proc fcQTreeWidget_virtualbase_updateEditorData(self: pointer, ): void {.importc: "QTreeWidget_virtualbase_updateEditorData".}
proc fcQTreeWidget_virtualbase_updateEditorGeometries(self: pointer, ): void {.importc: "QTreeWidget_virtualbase_updateEditorGeometries".}
proc fcQTreeWidget_virtualbase_verticalScrollbarAction(self: pointer, action: cint): void {.importc: "QTreeWidget_virtualbase_verticalScrollbarAction".}
proc fcQTreeWidget_virtualbase_horizontalScrollbarValueChanged(self: pointer, value: cint): void {.importc: "QTreeWidget_virtualbase_horizontalScrollbarValueChanged".}
proc fcQTreeWidget_virtualbase_closeEditor(self: pointer, editor: pointer, hint: cint): void {.importc: "QTreeWidget_virtualbase_closeEditor".}
proc fcQTreeWidget_virtualbase_commitData(self: pointer, editor: pointer): void {.importc: "QTreeWidget_virtualbase_commitData".}
proc fcQTreeWidget_virtualbase_editorDestroyed(self: pointer, editor: pointer): void {.importc: "QTreeWidget_virtualbase_editorDestroyed".}
proc fcQTreeWidget_virtualbase_edit2(self: pointer, index: pointer, trigger: cint, event: pointer): bool {.importc: "QTreeWidget_virtualbase_edit2".}
proc fcQTreeWidget_virtualbase_selectionCommand(self: pointer, index: pointer, event: pointer): cint {.importc: "QTreeWidget_virtualbase_selectionCommand".}
proc fcQTreeWidget_virtualbase_startDrag(self: pointer, supportedActions: cint): void {.importc: "QTreeWidget_virtualbase_startDrag".}
proc fcQTreeWidget_virtualbase_viewOptions(self: pointer, ): pointer {.importc: "QTreeWidget_virtualbase_viewOptions".}
proc fcQTreeWidget_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool {.importc: "QTreeWidget_virtualbase_focusNextPrevChild".}
proc fcQTreeWidget_virtualbase_dragEnterEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_dragEnterEvent".}
proc fcQTreeWidget_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_dragLeaveEvent".}
proc fcQTreeWidget_virtualbase_focusInEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_focusInEvent".}
proc fcQTreeWidget_virtualbase_focusOutEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_focusOutEvent".}
proc fcQTreeWidget_virtualbase_resizeEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_resizeEvent".}
proc fcQTreeWidget_virtualbase_inputMethodEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_inputMethodEvent".}
proc fcQTreeWidget_virtualbase_eventFilter(self: pointer, objectVal: pointer, event: pointer): bool {.importc: "QTreeWidget_virtualbase_eventFilter".}
proc fcQTreeWidget_virtualbase_minimumSizeHint(self: pointer, ): pointer {.importc: "QTreeWidget_virtualbase_minimumSizeHint".}
proc fcQTreeWidget_virtualbase_sizeHint(self: pointer, ): pointer {.importc: "QTreeWidget_virtualbase_sizeHint".}
proc fcQTreeWidget_virtualbase_setupViewport(self: pointer, viewport: pointer): void {.importc: "QTreeWidget_virtualbase_setupViewport".}
proc fcQTreeWidget_virtualbase_wheelEvent(self: pointer, param1: pointer): void {.importc: "QTreeWidget_virtualbase_wheelEvent".}
proc fcQTreeWidget_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void {.importc: "QTreeWidget_virtualbase_contextMenuEvent".}
proc fcQTreeWidget_virtualbase_changeEvent(self: pointer, param1: pointer): void {.importc: "QTreeWidget_virtualbase_changeEvent".}
proc fcQTreeWidget_virtualbase_devType(self: pointer, ): cint {.importc: "QTreeWidget_virtualbase_devType".}
proc fcQTreeWidget_virtualbase_setVisible(self: pointer, visible: bool): void {.importc: "QTreeWidget_virtualbase_setVisible".}
proc fcQTreeWidget_virtualbase_heightForWidth(self: pointer, param1: cint): cint {.importc: "QTreeWidget_virtualbase_heightForWidth".}
proc fcQTreeWidget_virtualbase_hasHeightForWidth(self: pointer, ): bool {.importc: "QTreeWidget_virtualbase_hasHeightForWidth".}
proc fcQTreeWidget_virtualbase_paintEngine(self: pointer, ): pointer {.importc: "QTreeWidget_virtualbase_paintEngine".}
proc fcQTreeWidget_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_keyReleaseEvent".}
proc fcQTreeWidget_virtualbase_enterEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_enterEvent".}
proc fcQTreeWidget_virtualbase_leaveEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_leaveEvent".}
proc fcQTreeWidget_virtualbase_moveEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_moveEvent".}
proc fcQTreeWidget_virtualbase_closeEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_closeEvent".}
proc fcQTreeWidget_virtualbase_tabletEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_tabletEvent".}
proc fcQTreeWidget_virtualbase_actionEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_actionEvent".}
proc fcQTreeWidget_virtualbase_showEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_showEvent".}
proc fcQTreeWidget_virtualbase_hideEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_hideEvent".}
proc fcQTreeWidget_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool {.importc: "QTreeWidget_virtualbase_nativeEvent".}
proc fcQTreeWidget_virtualbase_metric(self: pointer, param1: cint): cint {.importc: "QTreeWidget_virtualbase_metric".}
proc fcQTreeWidget_virtualbase_initPainter(self: pointer, painter: pointer): void {.importc: "QTreeWidget_virtualbase_initPainter".}
proc fcQTreeWidget_virtualbase_redirected(self: pointer, offset: pointer): pointer {.importc: "QTreeWidget_virtualbase_redirected".}
proc fcQTreeWidget_virtualbase_sharedPainter(self: pointer, ): pointer {.importc: "QTreeWidget_virtualbase_sharedPainter".}
proc fcQTreeWidget_virtualbase_childEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_childEvent".}
proc fcQTreeWidget_virtualbase_customEvent(self: pointer, event: pointer): void {.importc: "QTreeWidget_virtualbase_customEvent".}
proc fcQTreeWidget_virtualbase_connectNotify(self: pointer, signal: pointer): void {.importc: "QTreeWidget_virtualbase_connectNotify".}
proc fcQTreeWidget_virtualbase_disconnectNotify(self: pointer, signal: pointer): void {.importc: "QTreeWidget_virtualbase_disconnectNotify".}
proc fcQTreeWidget_protectedbase_items(self: pointer, data: pointer): struct_miqt_array {.importc: "QTreeWidget_protectedbase_items".}
proc fcQTreeWidget_protectedbase_indexFromItem(self: pointer, item: pointer): pointer {.importc: "QTreeWidget_protectedbase_indexFromItem".}
proc fcQTreeWidget_protectedbase_indexFromItemWithItem(self: pointer, item: pointer): pointer {.importc: "QTreeWidget_protectedbase_indexFromItemWithItem".}
proc fcQTreeWidget_protectedbase_itemFromIndex(self: pointer, index: pointer): pointer {.importc: "QTreeWidget_protectedbase_itemFromIndex".}
proc fcQTreeWidget_protectedbase_indexFromItem2(self: pointer, item: pointer, column: cint): pointer {.importc: "QTreeWidget_protectedbase_indexFromItem2".}
proc fcQTreeWidget_protectedbase_indexFromItem22(self: pointer, item: pointer, column: cint): pointer {.importc: "QTreeWidget_protectedbase_indexFromItem22".}
proc fcQTreeWidget_protectedbase_columnResized(self: pointer, column: cint, oldSize: cint, newSize: cint): void {.importc: "QTreeWidget_protectedbase_columnResized".}
proc fcQTreeWidget_protectedbase_columnCountChanged(self: pointer, oldCount: cint, newCount: cint): void {.importc: "QTreeWidget_protectedbase_columnCountChanged".}
proc fcQTreeWidget_protectedbase_columnMoved(self: pointer, ): void {.importc: "QTreeWidget_protectedbase_columnMoved".}
proc fcQTreeWidget_protectedbase_reexpand(self: pointer, ): void {.importc: "QTreeWidget_protectedbase_reexpand".}
proc fcQTreeWidget_protectedbase_rowsRemoved(self: pointer, parent: pointer, first: cint, last: cint): void {.importc: "QTreeWidget_protectedbase_rowsRemoved".}
proc fcQTreeWidget_protectedbase_drawTree(self: pointer, painter: pointer, region: pointer): void {.importc: "QTreeWidget_protectedbase_drawTree".}
proc fcQTreeWidget_protectedbase_indexRowSizeHint(self: pointer, index: pointer): cint {.importc: "QTreeWidget_protectedbase_indexRowSizeHint".}
proc fcQTreeWidget_protectedbase_rowHeight(self: pointer, index: pointer): cint {.importc: "QTreeWidget_protectedbase_rowHeight".}
proc fcQTreeWidget_protectedbase_setHorizontalStepsPerItem(self: pointer, steps: cint): void {.importc: "QTreeWidget_protectedbase_setHorizontalStepsPerItem".}
proc fcQTreeWidget_protectedbase_horizontalStepsPerItem(self: pointer, ): cint {.importc: "QTreeWidget_protectedbase_horizontalStepsPerItem".}
proc fcQTreeWidget_protectedbase_setVerticalStepsPerItem(self: pointer, steps: cint): void {.importc: "QTreeWidget_protectedbase_setVerticalStepsPerItem".}
